syntax = "proto3";

package cloud.disk_manager;

import "cloud/disk_manager/api/operation.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ydb-platform/nbs/cloud/disk_manager/api;disk_manager";

service FilesystemService {
    // Returns operation with:
    // response: google.protobuf.Empty
    rpc Create(CreateFilesystemRequest) returns (Operation);

    // Returns operation with:
    // metadata: DeleteFilesystemMetadata
    // response: google.protobuf.Empty
    rpc Delete(DeleteFilesystemRequest) returns (Operation);

    // Returns operation with:
    // response: google.protobuf.Empty
    rpc Resize(ResizeFilesystemRequest) returns (Operation);

    rpc DescribeModel(DescribeFilesystemModelRequest) returns (FilesystemModel) {}
}

enum FilesystemKind {
    FILESYSTEM_KIND_UNSPECIFIED = 0;
    FILESYSTEM_KIND_HDD = 1;
    FILESYSTEM_KIND_SSD = 2;
}

message FilesystemId {
    string zone_id = 1;
    string filesystem_id = 2;
}

message FilesystemPerformanceProfile {
    int64 max_read_bandwidth = 1;
    int64 max_read_iops = 2;
    int64 max_write_bandwidth = 3;
    int64 max_write_iops = 4;
}

message FilesystemModel {
    int64 block_size = 1;
    int64 size = 2;
    int64 channels_count = 3;
    FilesystemKind kind = 4;
    FilesystemPerformanceProfile performance_profile = 5;
}

message CreateFilesystemRequest {
    FilesystemId filesystem_id = 1;
    string cloud_id = 2;
    string folder_id = 3;
    int64 block_size = 4;
    int64 size = 5;
    FilesystemKind kind = 6;
}

message DeleteFilesystemRequest {
    FilesystemId filesystem_id = 1;
}

message DeleteFilesystemMetadata {
    FilesystemId filesystem_id = 1;
}

message ResizeFilesystemRequest {
    FilesystemId filesystem_id = 1;
    int64 size = 2;
}

message DescribeFilesystemModelRequest {
    string zone_id = 1;
    int64 block_size = 2;
    int64 size = 3;
    FilesystemKind kind = 4;
}
